@@ -31,6 +31,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Comparator
 import|;
 end_import
@@ -41,6 +50,15 @@ operator|.
 name|util
 operator|.
 name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 begin_import
@@ -172,6 +190,32 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|Terms
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TermsEnum
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|BooleanClause
@@ -278,7 +322,46 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|BytesRef
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|ReaderUtil
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|Version
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|VirtualMethod
 import|;
 end_import
 begin_comment
@@ -1620,9 +1703,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/**    * Indexes the data from the given {@link Dictionary}.    * @param dict Dictionary to index    * @param mergeFactor mergeFactor to use when indexing    * @param ramMB the max amount or memory in MB to use    * @throws AlreadyClosedException if the Spellchecker is already closed    * @throws IOException    */
+comment|/**    * Indexes the data from the given {@link Dictionary}.    * @param dict Dictionary to index    * @param mergeFactor mergeFactor to use when indexing    * @param ramMB the max amount or memory in MB to use    * @param optimize whether or not the spellcheck index should be optimized    * @throws AlreadyClosedException if the Spellchecker is already closed    * @throws IOException    */
 DECL|method|indexDictionary
 specifier|public
+specifier|final
 name|void
 name|indexDictionary
 parameter_list|(
@@ -1634,6 +1718,9 @@ name|mergeFactor
 parameter_list|,
 name|int
 name|ramMB
+parameter_list|,
+name|boolean
+name|optimize
 parameter_list|)
 throws|throws
 name|IOException
@@ -1703,6 +1790,105 @@ argument_list|(
 name|mergeFactor
 argument_list|)
 expr_stmt|;
+name|IndexSearcher
+name|indexSearcher
+init|=
+name|obtainSearcher
+argument_list|()
+decl_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|TermsEnum
+argument_list|>
+name|termsEnums
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|TermsEnum
+argument_list|>
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|searcher
+operator|.
+name|maxDoc
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+operator|new
+name|ReaderUtil
+operator|.
+name|Gather
+argument_list|(
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|add
+parameter_list|(
+name|int
+name|base
+parameter_list|,
+name|IndexReader
+name|r
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Terms
+name|terms
+init|=
+name|r
+operator|.
+name|terms
+argument_list|(
+name|F_WORD
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|terms
+operator|!=
+literal|null
+condition|)
+name|termsEnums
+operator|.
+name|add
+argument_list|(
+name|terms
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+block|}
+name|boolean
+name|isEmpty
+init|=
+name|termsEnums
+operator|.
+name|isEmpty
+argument_list|()
+decl_stmt|;
+try|try
+block|{
 name|Iterator
 argument_list|<
 name|String
@@ -1714,6 +1900,15 @@ operator|.
 name|getWordsIterator
 argument_list|()
 decl_stmt|;
+name|BytesRef
+name|currentTerm
+init|=
+operator|new
+name|BytesRef
+argument_list|()
+decl_stmt|;
+name|terms
+label|:
 while|while
 condition|(
 name|iter
@@ -1750,16 +1945,49 @@ comment|// too short we bail but "too long" is fine...
 block|}
 if|if
 condition|(
-name|this
+operator|!
+name|isEmpty
+condition|)
+block|{
+comment|// we have a non-empty index, check if the term exists
+name|currentTerm
 operator|.
-name|exist
+name|copy
 argument_list|(
 name|word
 argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|TermsEnum
+name|te
+range|:
+name|termsEnums
+control|)
+block|{
+if|if
+condition|(
+name|te
+operator|.
+name|seek
+argument_list|(
+name|currentTerm
+argument_list|,
+literal|false
+argument_list|)
+operator|==
+name|TermsEnum
+operator|.
+name|SeekStatus
+operator|.
+name|FOUND
 condition|)
 block|{
-comment|// if the word already exist in the gramindex
-continue|continue;
+continue|continue
+name|terms
+continue|;
+block|}
+block|}
 block|}
 comment|// ok index the word
 name|Document
@@ -1788,7 +2016,20 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+finally|finally
+block|{
+name|releaseSearcher
+argument_list|(
+name|indexSearcher
+argument_list|)
+expr_stmt|;
+block|}
 comment|// close writer
+if|if
+condition|(
+name|optimize
+condition|)
 name|writer
 operator|.
 name|optimize
@@ -1808,9 +2049,41 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/**    * Indexes the data from the given {@link Dictionary}.    * @param dict the dictionary to index    * @param mergeFactor mergeFactor to use when indexing    * @param ramMB the max amount or memory in MB to use    * @throws IOException    */
+DECL|method|indexDictionary
+specifier|public
+specifier|final
+name|void
+name|indexDictionary
+parameter_list|(
+name|Dictionary
+name|dict
+parameter_list|,
+name|int
+name|mergeFactor
+parameter_list|,
+name|int
+name|ramMB
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|indexDictionary
+argument_list|(
+name|dict
+argument_list|,
+name|mergeFactor
+argument_list|,
+name|ramMB
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Indexes the data from the given {@link Dictionary}.    * @param dict the dictionary to index    * @throws IOException    */
 DECL|method|indexDictionary
 specifier|public
+specifier|final
 name|void
 name|indexDictionary
 parameter_list|(
@@ -1826,7 +2099,12 @@ name|dict
 argument_list|,
 literal|300
 argument_list|,
-literal|10
+operator|(
+name|int
+operator|)
+name|IndexWriterConfig
+operator|.
+name|DEFAULT_RAM_BUFFER_SIZE_MB
 argument_list|)
 expr_stmt|;
 block|}
@@ -1925,10 +2203,11 @@ operator|new
 name|Document
 argument_list|()
 decl_stmt|;
-name|doc
-operator|.
-name|add
-argument_list|(
+comment|// the word field is never queried on... its indexed so it can be quickly
+comment|// checked for rebuild (and stored for retrieval). Doesn't need norms or TF/pos
+name|Field
+name|f
+init|=
 operator|new
 name|Field
 argument_list|(
@@ -1948,6 +2227,26 @@ name|Index
 operator|.
 name|NOT_ANALYZED
 argument_list|)
+decl_stmt|;
+name|f
+operator|.
+name|setOmitTermFreqAndPositions
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|f
+operator|.
+name|setOmitNorms
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
 argument_list|)
 expr_stmt|;
 comment|// orig term
@@ -2085,10 +2384,10 @@ operator|==
 literal|0
 condition|)
 block|{
-name|doc
-operator|.
-name|add
-argument_list|(
+comment|// only one term possible in the startXXField, TF/pos and norms aren't needed.
+name|Field
+name|startField
+init|=
 operator|new
 name|Field
 argument_list|(
@@ -2110,6 +2409,26 @@ name|Index
 operator|.
 name|NOT_ANALYZED
 argument_list|)
+decl_stmt|;
+name|startField
+operator|.
+name|setOmitTermFreqAndPositions
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|startField
+operator|.
+name|setOmitNorms
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|startField
 argument_list|)
 expr_stmt|;
 block|}
@@ -2126,10 +2445,10 @@ literal|null
 condition|)
 block|{
 comment|// may not be present if len==ng1
-name|doc
-operator|.
-name|add
-argument_list|(
+comment|// only one term possible in the endXXField, TF/pos and norms aren't needed.
+name|Field
+name|endField
+init|=
 operator|new
 name|Field
 argument_list|(
@@ -2151,6 +2470,26 @@ name|Index
 operator|.
 name|NOT_ANALYZED
 argument_list|)
+decl_stmt|;
+name|endField
+operator|.
+name|setOmitTermFreqAndPositions
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|endField
+operator|.
+name|setOmitNorms
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|endField
 argument_list|)
 expr_stmt|;
 block|}
